--- a/src/components/Modal/index.css
+++ b/src/components/Modal/index.css
@@ -7,6 +7,7 @@
   max-height: 80vh;
   max-width: 90vw;
   overflow: auto;
+  background-color: white;
 }
 
 .modal-mask {
@@ -16,4 +17,6 @@
   left: 0;
   bottom: 0;
   right: 0;
+  background: #00000075;
+  backdrop-filter: blur(3px);
 }
